<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Map My Travel</string>
    <string name="title_activity_travel_map">Map My Travel</string>
    <string name="title_activity_main_photo">My Photo</string>
    <string name="Main_Location">Add Location</string>
    <string name="Main_Photo">Add Photo</string>
    <string name="Main_NewTravel">New Travel</string>
    <string name="Main_TravelList">Travel List</string>
    <string name="action_search">search</string>
    <string name="action_share">share</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Image_list">Image List:</string>
    <string name="Image_Main_Name">FoodName</string>
    <string name="Image_Sub_1st">Location</string>
    <string name="Image_Sub_2nd">Score</string>
    <string name="TravelList_shareMapButton">Share!</string>
    <string name="TravelList_LinktoWebButton">Google!</string>
    
    <string-array name="List_DropDown"> 
        <item >list1</item>
        <item >list2</item>
        <item >list3</item>
        
        </string-array>
</resources>