<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="150dp"
        android:layout_row="0"
        android:columnCount="1" >

        <Button
            android:id="@+id/button1"
            android:text="@string/Main_TravelList" 
            android:onClick="MtTravel"
        />
			
        
        <Button
            android:id="@+id/button2"
            android:text="@string/Main_Location" 
            android:layout_gravity="right|top"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="MtLocation"
        />

        <Button
            android:id="@+id/button3"
            android:text="@string/Main_Photo" 
            android:layout_gravity="left|bottom"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="MtPhoto"
        />

        <Button
            android:id="@+id/button4"
            android:text="@string/Main_Imformation" 
            android:layout_gravity="right|bottom"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="MtImformation"
        />

    </GridLayout>

</GridLayout>